[gd_scene load_steps=4 format=2]

[ext_resource path="res://Gun.gd" type="Script" id=1]
[ext_resource path="res://assets/gun.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Shoot"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, 2.5 ), Vector2( 2, 2.5 ), Vector2( 2.5, 2.5 ) ]
}

[node name="Gun" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
offset = Vector2( 5.99026, 0.00250874 )

[node name="BulletSpawn" type="Position2D" parent="Sprite"]
position = Vector2( 14, -3 )
scale = Vector2( 0.5, 0.5 )

[node name="Aim" type="Position2D" parent="Sprite"]
position = Vector2( 0, -3 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shoot = SubResource( 1 )
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
